--- a/SmoothCompass/Shared/NuGet.nuspec
+++ b/SmoothCompass/Shared/NuGet.nuspec
@@ -2,21 +2,22 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>Zebble.Plugin.SmoothCompass</id>
-    <version>1.0.0</version>
-    <title>SmoothCompass plugin for Zebble for Xamarin</title>
-    <description>SmoothCompass plugin for Zebble for Xamarin</description>
-	<authors>Mobile App Technologies Ltd</authors>
-	<!--<owners>Your name</owners>-->
-	<!--<licenseUrl>http://your-website.com/Licence.txt</licenseUrl>-->
-	<copyright>Copyright ©2017 Mobile App Technologies Ltd - All rights reserved.</copyright>
-	<dependencies>
-		<dependency id="Zebble" version="4.0.182" />
-	</dependencies>
+    <version>4.0.142</version>
+    <title>Smooth Compass plugin for Zebble for Xamarin</title>
+    <description>
+      The built-in compass sensor returns shaky data that randomly changes by 1-2 degrees, which is a problem for UI visualisation.
+      This plug-in solves that by combining data from compass, gyroscope and accelerometer to deliver a smooth and more natural result.
+    </description>
+    <iconUrl>https://raw.githubusercontent.com/Geeksltd/SmoothCompass/master/SmoothCompass/Shared/Icon.png</iconUrl>
+    <authors>Mobile App Technologies Ltd</authors>
+    <copyright>Copyright ©2017 Mobile App Technologies Ltd - All rights reserved.</copyright>
+    <dependencies>
+      <dependency id="Zebble" version="4.0.226" />
+    </dependencies>
   </metadata>
   <files>
-    <file src="lib\SmoothCompass.iOS.*" target="lib\Xamarin.iOS10\" />
-    <file src="lib\SmoothCompass.Android.*" target="lib\MonoAndroid10\" />
-    <file src="lib\SmoothCompass.UWP.*" target="lib\UAP10\" />
+    <file src="..\lib\SmoothCompass.iOS.*" target="lib\Xamarin.iOS10\" />
+    <file src="..\lib\SmoothCompass.Android.*" target="lib\MonoAndroid10\" />
+    <file src="..\lib\SmoothCompass.UWP.*" target="lib\UAP10\" />
   </files>
-
 </package>
