--- a/SmoothCompass/UWP/UWP.csproj
+++ b/SmoothCompass/UWP/UWP.csproj
@@ -11,7 +11,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>UWP</RootNamespace>
-    <AssemblyName>SmoothCompass.UWP</AssemblyName>
+    <AssemblyName>Zebble.SmoothCompass.UWP</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
