--- a/SmoothCompass/Shared/NuGet/NuGet.nuspec
+++ b/SmoothCompass/Shared/NuGet/NuGet.nuspec
@@ -2,18 +2,16 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>Zebble.Plugin.SmoothCompass</id>
-    <version>4.0.144</version>
+    <version>4.0.145</version>
     <title>Smooth Compass for Zebble for Xamarin</title>
     <description>
       The built-in compass sensor returns shaky data that randomly changes by 1-2 degrees, which is a problem for UI visualisation.
       This plug-in solves that by combining data from compass, gyroscope and accelerometer to deliver a smooth and more natural result.
     </description>
+    <projectUrl>https://github.com/Geeksltd/SmoothCompass</projectUrl>
     <iconUrl>https://raw.githubusercontent.com/Geeksltd/SmoothCompass/master/SmoothCompass/Shared/Icon.png</iconUrl>
     <authors>Mobile App Technologies Ltd</authors>
-    <copyright>Copyright ©2017 Mobile App Technologies Ltd - All rights reserved.</copyright>
-    <dependencies>
-      <dependency id="Zebble" version="4.0.227" />
-    </dependencies>
+    <copyright>Copyright ©2017 Mobile App Technologies Ltd - All rights reserved.</copyright>    
   </metadata>
   <files>
     <file src="..\..\lib\Zebble.SmoothCompass.iOS.*" target="lib\Xamarin.iOS10\" />
