--- a/Shared/NuGet/NuGet.nuspec
+++ b/Shared/NuGet/NuGet.nuspec
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
-    <id>Zebble.Plugin.SmoothCompass</id>
-    <version>4.0.153</version>
+    <id>Zebble.SmoothCompass</id>
+    <version>4.0.156</version>
     <title>Smooth Compass for Zebble (Xamarin)</title>
     <description>
       The built-in compass sensor returns shaky data that randomly changes by 1-2 degrees, which is a problem for UI visualisation.
