--- a/Shared/NuGet/NuGet.nuspec
+++ b/Shared/NuGet/NuGet.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>Zebble.SmoothCompass</id>
-    <version>4.0.158</version>
+    <version>4.0.159</version>
     <title>Smooth Compass for Zebble (Xamarin)</title>
     <description>
       The built-in compass sensor returns shaky data that randomly changes by 1-2 degrees, which is a problem for UI visualisation.
@@ -11,7 +11,7 @@
     <projectUrl>https://github.com/Geeksltd/SmoothCompass</projectUrl>
     <iconUrl>https://raw.githubusercontent.com/Geeksltd/SmoothCompass/master/Shared/Icon.png</iconUrl>
     <authors>Mobile App Technologies Ltd</authors>
-    <copyright>Copyright ©2017 Mobile App Technologies Ltd - All rights reserved.</copyright>
+    <copyright>Copyright © 2018 Geeks Ltd - All rights reserved.</copyright>
   </metadata>
   <files>
     <file src="..\..\lib\Zebble.SmoothCompass.iOS.*" target="lib\Xamarin.iOS10\" />
