--- a/Android/packages.config
+++ b/Android/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid60" />
   <package id="Xamarin.Build.Download" version="0.4.7" targetFramework="monoandroid80" />
-  <package id="Zebble" version="4.3.100" targetFramework="monoandroid80" />
+  <package id="Zebble" version="4.4.101" targetFramework="monoandroid80" />
+  <package id="Zebble.Sensors" version="1.1.100" targetFramework="monoandroid80" />
 </packages>
