--- a/iOS/iOS.csproj
+++ b/iOS/iOS.csproj
@@ -38,7 +38,10 @@
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.iOS" />
     <Reference Include="Zebble.iOS, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zebble.4.3.100\lib\Xamarin.iOS10\Zebble.iOS.dll</HintPath>
+      <HintPath>..\packages\Zebble.4.4.101\lib\Xamarin.iOS10\Zebble.iOS.dll</HintPath>
+    </Reference>
+    <Reference Include="Zebble.Sensors.iOS, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Zebble.Sensors.1.1.100\lib\Xamarin.iOS10\Zebble.Sensors.iOS.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
