--- a/SmoothCompass.csproj
+++ b/SmoothCompass.csproj
@@ -7,7 +7,7 @@
     <RootNamespace>Zebble</RootNamespace>
     <PackageId>Zebble.SmoothCompass</PackageId>
     <Product>$(AssemblyName) ($(TargetFramework))</Product>
-    <Version>4.0.164.0</Version>
+    <Version>4.0.165.0</Version>
     <PackOnBuild>true</PackOnBuild>
     <NeutralLanguage>en</NeutralLanguage>
     <LangVersion>default</LangVersion>
@@ -45,6 +45,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid')) ">
     <DefineConstants>ANDROID</DefineConstants>
+    <AndroidUseIntermediateDesignerFile>false</AndroidUseIntermediateDesignerFile>
   </PropertyGroup>
   <PropertyGroup Condition=" $(TargetFramework.StartsWith('Xamarin.iOS')) ">
     <DefineConstants>IOS</DefineConstants>
@@ -68,8 +69,7 @@
     <None Remove="Zebble-LicenseAgreement.txt" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Zebble" Version="4.5.423" />
-    <PackageReference Include="Zebble.Sensors" Version="1.1.107" />
+    <PackageReference Include="Zebble.Sensors" Version="1.1.108" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Android\" />
